--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
         <div class="header">
             <div class="logo">
                 <i class="fas fa-comments"></i>
-                <h1>Advanced Chat & Management System</h1>
+                <h1>Chatnet</h1>
             </div>
             <div class="user-controls">
                 <div class="profile-icon-container" onclick="showProfileModal()" id="profile-icon-container" style="display:  none;">
